# warfare-rs

./: Cargo.toml  README.md
assets/data/name_lists/: process.py
assets/icons/: icon.xcf  rifle.xcf
assets/projects/: desert.xcf  grass.xcf  marker.xcf  template.psd  template.xcf  water.xcf
src/: area.rs  camera.rs  controls.rs  error.rs  generate.rs  generator.rs  gui.rs  main.rs  math.rs  old_selection.rs  overlay.rs  selection.rs  spectrum.rs  state.rs  terrain.rs
src/behavior/: mod.rs  pathfinding.rs
src/generation/: area.rs  factors.rs  generate.rs  id.rs  layers.rs  marker.rs  mod.rs  terrain.rs  unit.rs  weather.rs
src/networking/: messages.rs  mod.rs
src/objects/: location.rs  map.rs  mod.rs  name.rs  points.rs  position.rs  property.rs
src/resources/: mod.rs  spectrum.rs  textures.rs
src/state/: calendar.rs  demographics.rs  events.rs  flags.rs  mod.rs  movement.rs  state.rs  traits.rs
src/systems/: camera.rs  control.rs  generate.rs  gui.rs  icon.rs  mod.rs  network.rs  overlay.rs  selection.rs
tmp/: generate.old.rs  tile.rs  view.rs
