[package]
name = "warfare"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = "0.5"                  # game engine
winit = "0.24.0"              # for window icon
image = "0.23.14"             # to load window icon
bevy_egui = "0.7"             # in-game gui
bevy_tilemap = "0.4.0"        # maps and hex tiles
chrono = "0.4.19"             # calendar and date
once_cell = "1.8.0"           # context struct

# noise for map generation
rand = "0.8.4"
rand_distr = "0.4.2"
noise = "0.7.0"

# ordered hashmap for unit position
indexmap = "1.7.0"

# logging and error handling
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
pretty_env_logger = "0.4.0"