[package]
name = "warfare"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = "0.5"                  # game engine
winit = "0.24.0"              # for window icon
image = "0.23.14"             # to load window icon
bevy_egui = "0.7"             # in-game gui
bevy_tilemap = "0.4.0"        # maps and hex tiles
bevy_spicy_networking = "0.6" # networking communication
chrono = "0.4.19"             # calendar and date
once_cell = "1.8.0"           # context struct

serde = { version = "1.0.130", features = ["derive"] }
erased-serde = { version = "0.3.17", features = ["unstable-debug"] }
typetag = "0.1.8"

# noise for map generation
rand = "0.8.4"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
noise = "0.7.0"
itertools = "0.10.3"

# ordered hashmap for unit position
indexmap = "1.7.0"
multi-map = "1.3.0"

# logging and error handling
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
